@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   163: AstroFloyd, 19/10/2011
+     - Updated CMake, using options from CMakeFiles
+     
    162: AstroFloyd, 08/06/2011
      - plotmdl: added read_chosen_mdl()
      - Added plotmdln_new.f90 to start using mdl_functions
